--- a/seattle.conf
+++ b/seattle.conf
@@ -3,6 +3,41 @@ include "../common/akka-router.conf"
 include "../common/metrics.conf"
 include "../common/matsim.conf"
 
+beam.agentsim.firstIteration = 0
+beam.agentsim.lastIteration = 0
+
+beam.exchange.scenario {
+  # source for now can be "MATSim" or "UrbanSim"
+  source = "urbansim_v2"
+  # Input file format for scenario loader can be "csv" or "parquet"
+  fileFormat = "csv"
+  folder = ${beam.inputDirectory}"/urbansim_v2"
+  convertWgs2Utm = true
+  modeMap = [
+    "BIKE           -> bike",
+    "DRIVEALONEFREE -> car",
+    "DRIVEALONEPAY  -> car",
+    "DRIVE_COM      -> drive_transit",
+    "DRIVE_EXP      -> drive_transit",
+    "DRIVE_HVY      -> drive_transit",
+    "DRIVE_LOC      -> drive_transit",
+    "DRIVE_LRF      -> drive_transit",
+    "SHARED2FREE    -> car",
+    "SHARED2PAY     -> car",
+    "SHARED3FREE    -> car",
+    "SHARED3PAY     -> car",
+    "TAXI           -> ride_hail",
+    "TNC_SHARED     -> ride_hail",
+    "TNC_SINGLE     -> ride_hail",
+    "WALK           -> walk",
+    "WALK_COM       -> walk_transit",
+    "WALK_EXP       -> walk_transit",
+    "WALK_HVY       -> walk_transit",
+    "WALK_LOC       -> walk_transit",
+    "WALK_LRF       -> walk_transit",
+  ]
+}
+
 # This version, base-seattle.conf, is configured to use a subsample of the population located in:
 #  ${beam.inputDirectory}"/sample"
 ##################################################################
@@ -10,8 +45,6 @@ include "../common/matsim.conf"
 ##################################################################
 beam.agentsim.simulationName = "seattle"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 1.0
-beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 1
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.timeBinSize = 3600
 beam.agentsim.endTime = "30:00:00"
@@ -35,18 +68,18 @@ beam.agentsim.agents.modalBehaviors.lccm.filePath = ${beam.inputDirectory}"/lccm
 beam.agentsim.agents.modeIncentive.filePath = ${beam.inputDirectory}"/incentives.csv"
 beam.agentsim.agents.ptFare.filePath = ${beam.inputDirectory}"/ptFares.csv"
 beam.agentsim.agents.plans {
-  inputPlansFilePath = ${beam.inputDirectory}"/sample/1k/population.xml.gz"
-  inputPersonAttributesFilePath = ${beam.inputDirectory}"/sample/1k/populationAttributes.xml.gz"
+  inputPlansFilePath = ""
+  inputPersonAttributesFilePath = ""
 }
 beam.agentsim.agents.households {
-  inputFilePath = ${beam.inputDirectory}"/sample/1k/households.xml.gz"
-  inputHouseholdAttributesFilePath = ${beam.inputDirectory}"/sample/1k/householdAttributes.xml.gz"
+  inputFilePath = ""
+  inputHouseholdAttributesFilePath = ""
 }
 #BeamVehicles Params
 beam.agentsim.agents.vehicles.linkToGradePercentFilePath = ${beam.inputDirectory}"/r5/linkToGradePercent.csv"
 beam.agentsim.agents.vehicles.fuelTypesFilePath = ${beam.inputDirectory}"/beamFuelTypes.csv"
 beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/vehicleTypes.csv"
-beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/sample/1k/vehicles.csv.gz"
+beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/vehicles.csv.gz"
 beam.agentsim.agents.vehicles.sharedFleets = []
 #TAZ params
 beam.agentsim.taz.filePath=${beam.inputDirectory}"/taz-centers.csv.gz"
@@ -95,7 +128,7 @@ beam.replanning{
 ##################################################################
 # Warm Mode
 ##################################################################
-beam.warmStart.type = "full"
+beam.warmStart.type = "disabled"
 #PATH TYPE OPTIONS: PARENT_RUN, ABSOLUTE_PATH
 #PARENT_RUN: can be a director or zip archive of the output directory (e.g. like what get's stored on S3). We should also be able to specify a URL to an S3 output.
 #ABSOLUTE_PATH: a directory that contains required warm stats files (e.g. linkstats and eventually a plans).
