adds param value for linkRadiusMeters

--- a/seattle.conf
+++ b/seattle.conf
@@ -318,6 +318,7 @@ beam.routing {
     osmMapdbFile = ${beam.inputDirectory}"/r5/osm.mapdb"
     mNetBuilder.fromCRS = "epsg:4326" # WGS84
     mNetBuilder.toCRS = ${beam.spatial.localCRS}
+    linkRadiusMeters = 9000.0
   }
 }
 
