--- a/parkingMNLExperiment/experiment.yml
+++ b/parkingMNLExperiment/experiment.yml
@@ -26,34 +26,34 @@ factors:
     levels:
       - name: Low
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.distance_multiplier: 0.5
+          beam.agentsim.agents.parking.multinomialLogit.params.distance_multiplier: 0.5
       - name: Base
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.distance_multiplier: 1
+          beam.agentsim.agents.parking.multinomialLogit.params.distance_multiplier: 1
       - name: High
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.distance_multiplier: 2
+          beam.agentsim.agents.parking.multinomialLogit.params.distance_multiplier: 2
 
   - title: InstalledCapacityMultiplier
     levels:
       - name: Low
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.installed_capacity_multiplier: 0.000
+          beam.agentsim.agents.parking.multinomialLogit.params.installed_capacity_multiplier: 0.000
       - name: Base
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.installed_capacity_multiplier: 0.001
+          beam.agentsim.agents.parking.multinomialLogit.params.installed_capacity_multiplier: 0.001
       - name: High
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.installed_capacity_multiplier: 0.002
+          beam.agentsim.agents.parking.multinomialLogit.params.installed_capacity_multiplier: 0.002
 
   - title: ParkingCostsPriceMultiplier
     levels:
       - name: Low
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.parking_costs_price_multiplier: 0
+          beam.agentsim.agents.parking.multinomialLogit.params.parking_costs_price_multiplier: 0
       - name: Base
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.parking_costs_price_multiplier: 4.5
+          beam.agentsim.agents.parking.multinomialLogit.params.parking_costs_price_multiplier: 4.5
       - name: High
         params:
-          beam.agentsim.agents.parking.mulitnomialLogit.params.parking_costs_price_multiplier: 9
+          beam.agentsim.agents.parking.multinomialLogit.params.parking_costs_price_multiplier: 9
