--- a/seattle-calibration/experiment.yml
+++ b/seattle-calibration/experiment.yml
@@ -46,37 +46,37 @@ factors:
     levels:
     - name: Low
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_intercept: -15.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.walk_transit_intercept: -15.0
     - name: High
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_intercept: 5.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.walk_transit_intercept: 5.0
 
   - title: driveTransitIntercept
     levels:
     - name: Low
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept: -15.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.drive_transit_intercept: -15.0
     - name: High
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept: 5.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.drive_transit_intercept: 5.0
 
   - title: rideHailTransitIntercept
     levels:
     - name: Low
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept: -5.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.ride_hail_transit_intercept: -5.0
     - name: High
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept: 5.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.ride_hail_transit_intercept: 5.0
 
   - title: rideHailIntercept
     levels:
     - name: Low
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept: -5.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.ride_hail_intercept: -5.0
     - name: High
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept: 5.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.ride_hail_intercept: 5.0
 
   - title: transitCapacity
     levels:
@@ -100,10 +100,10 @@ factors:
     levels:
     - name: Low
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept: -15.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.walk_intercept: -15.0
     - name: High
       params:
-        beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept: -4.0
+        beam.agentsim.agents.modalBehaviors.multinomialLogit.params.walk_intercept: -4.0
 
   - title: countsFactor
     levels:
