--- a/seattle.conf
+++ b/seattle.conf
@@ -8,10 +8,10 @@ beam.agentsim.lastIteration = 0
 
 beam.exchange.scenario {
   # source for now can be "MATSim" or "UrbanSim"
-  source = "urbansim_v2"
+  source = "urbansim"
   # Input file format for scenario loader can be "csv" or "parquet"
   fileFormat = "csv"
-  folder = ${beam.inputDirectory}"/urbansim_v2"
+  folder = ${beam.inputDirectory}"/urbansim"
   convertWgs2Utm = true
   modeMap = [
     "BIKE           -> bike",
@@ -314,7 +314,7 @@ beam.routing {
     directory = ${beam.inputDirectory}"/r5"
     # Departure window in min
     departureWindow = 1.0167
-    osmFile = ${beam.inputDirectory}"/r5/seattle.osm.pbf"
+    osmFile = ${beam.inputDirectory}"/r5/emme.osm.pbf"
     osmMapdbFile = ${beam.inputDirectory}"/r5/osm.mapdb"
     mNetBuilder.fromCRS = "epsg:4326" # WGS84
     mNetBuilder.toCRS = ${beam.spatial.localCRS}
