--- a/seattle.conf
+++ b/seattle.conf
@@ -8,10 +8,10 @@ beam.agentsim.lastIteration = 0
 
 beam.exchange.scenario {
   # source for now can be "MATSim" or "UrbanSim"
-  source = "urbansim"
+  source = "urbansim_v2"
   # Input file format for scenario loader can be "csv" or "parquet"
   fileFormat = "csv"
-  folder = ${beam.inputDirectory}"/urbansim"
+  folder = ${beam.inputDirectory}"/urbansim/"
   convertWgs2Utm = true
   modeMap = [
     "BIKE           -> bike",
