--- a/seattle.conf
+++ b/seattle.conf
@@ -6,6 +6,22 @@ include "../common/matsim.conf"
 beam.agentsim.firstIteration = 0
 beam.agentsim.lastIteration = 0
 
+
+beam.agentsim.taz.filePath=${beam.inputDirectory}"/shape/block-groups-32048.shp"
+beam.input.lastBaseOutputDir = ${beam.outputs.baseOutputDirectory}
+beam.input.simulationPrefix = "year"
+beam.agentsim.agents.plans.merge.fraction = 1.0
+beam.warmStart.type = "linkStatsFromLastRun"
+beam.warmStart.initialLinkstatsFilePath = ${beam.inputDirectory}"/r5/init.linkstats.csv.gz"
+beam.exchange {
+  output {
+    activitySimSkimsEnabled = true
+  }
+}
+beam.router.skim.activity-sim-skimmer.fileOutputFormat = "omx"
+beam.routing.r5.travelTimeNoiseFraction = 0.15
+
+
 beam.exchange.scenario {
   # source for now can be "MATSim" or "UrbanSim"
   source = "urbansim_v2"
@@ -82,7 +98,6 @@ beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/veh
 beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/vehicles.csv.gz"
 beam.agentsim.agents.vehicles.sharedFleets = []
 #TAZ params
-beam.agentsim.taz.filePath=${beam.inputDirectory}"/taz-centers.csv.gz"
 beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/taz-parking.csv.gz"
 # SurgePricing parameters
 beam.agentsim.agents.rideHail.surgePricing.surgeLevelAdaptionStep=0.1
@@ -128,7 +143,6 @@ beam.replanning{
 ##################################################################
 # Warm Mode
 ##################################################################
-beam.warmStart.type = "disabled"
 #PATH TYPE OPTIONS: PARENT_RUN, ABSOLUTE_PATH
 #PARENT_RUN: can be a director or zip archive of the output directory (e.g. like what get's stored on S3). We should also be able to specify a URL to an S3 output.
 #ABSOLUTE_PATH: a directory that contains required warm stats files (e.g. linkstats and eventually a plans).
@@ -144,7 +158,7 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "HOME"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="Car"
-beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.5
+beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.01
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet.csv"
 # Ride Hailing General Params
@@ -334,3 +348,5 @@ beam.calibration.counts {
   inputCountsFile = ${beam.inputDirectory}"/counts/fall_2015_wed_filtered.xml"
 }
 
+
+beam.replanning.maxAgentPlanMemorySize = 0
