change link radius meter

--- a/seattle-50k.conf
+++ b/seattle-50k.conf
@@ -2,3 +2,4 @@ include "seattle.conf"
 
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.028406
 beam.routing.r5.osmFile = ${beam.inputDirectory}"/r5/emme.osm.pbf"
+beam.routing.r5.linkRadiusMeters = 1000.0
