--- a/seattle.conf
+++ b/seattle.conf
@@ -8,11 +8,11 @@ beam.agentsim.lastIteration = 0
 
 
 beam.agentsim.taz.filePath=${beam.inputDirectory}"/shape/block-groups-32048.shp"
+beam.agentsim.taz.tazIdFieldName = "OBJECTID"
 beam.input.lastBaseOutputDir = ${beam.outputs.baseOutputDirectory}
 beam.input.simulationPrefix = "year"
 beam.agentsim.agents.plans.merge.fraction = 1.0
 beam.warmStart.type = "linkStatsFromLastRun"
-beam.warmStart.initialLinkstatsFilePath = ${beam.inputDirectory}"/r5/init.linkstats.csv.gz"
 beam.exchange {
   output {
     activitySimSkimsEnabled = true
@@ -43,7 +43,7 @@ beam.exchange.scenario {
     "SHARED3FREE    -> car",
     "SHARED3PAY     -> car",
     "TAXI           -> ride_hail",
-    "TNC_SHARED     -> ride_hail",
+    "TNC_SHARED     -> ride_hail_pooled",
     "TNC_SINGLE     -> ride_hail",
     "WALK           -> walk",
     "WALK_COM       -> walk_transit",
