--- a/seattle-200k.conf
+++ b/seattle-200k.conf
@@ -1,4 +1,4 @@
 include "seattle.conf"
 
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.113624
-beam.routing.r5.osmFile = ${beam.inputDirectory}"/r5/emme.osm.pbf"
+beam.routing.r5.osmFile = ${beam.inputDirectory}"/r5/aafile0.osm.pbf"
