--- a/seattle-50k.conf
+++ b/seattle-50k.conf
@@ -1,5 +1,4 @@
 include "seattle.conf"
 
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.028406
-beam.routing.r5.osmFile = ${beam.inputDirectory}"/r5/emme.osm.pbf"
-beam.routing.r5.linkRadiusMeters = 1000.0
+beam.routing.r5.osmFile = ${beam.inputDirectory}"/r5/aafile0.osm.pbf"
