--- a/seattle.conf
+++ b/seattle.conf
@@ -328,7 +328,7 @@ beam.routing {
     directory = ${beam.inputDirectory}"/r5"
     # Departure window in min
     departureWindow = 1.0167
-    osmFile = ${beam.inputDirectory}"/r5/emme.osm.pbf"
+    osmFile = ${beam.inputDirectory}"/r5/aaafile0_speed_capacity.osm.pbf"
     osmMapdbFile = ${beam.inputDirectory}"/r5/osm.mapdb"
     mNetBuilder.fromCRS = "epsg:4326" # WGS84
     mNetBuilder.toCRS = ${beam.spatial.localCRS}
