--- a/seattle.conf
+++ b/seattle.conf
@@ -20,6 +20,8 @@ beam.exchange {
 }
 beam.router.skim.activity-sim-skimmer.fileOutputFormat = "omx"
 beam.routing.r5.travelTimeNoiseFraction = 0.15
+beam.router.skim.writeSkimsInterval = 1
+
 
 
 beam.exchange.scenario {
@@ -114,7 +116,7 @@ beam.agentsim.tuning.rideHailPrice = 1.0
 # Physsim
 ###########################
 beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/r5/physsim-network.xml"
-beam.physsim.flowCapacityFactor = 0.01
+beam.physsim.flowCapacityFactor = 0.1
 beam.physsim.storageCapacityFactor = 0.01
 beam.physsim.writeEventsInterval = 0
 beam.physsim.writePlansInterval = 0
