switch to parbprsim

--- a/seattle.conf
+++ b/seattle.conf
@@ -11,7 +11,7 @@ beam.agentsim.taz.filePath=${beam.inputDirectory}"/shape/block-groups-32048.shp"
 beam.agentsim.taz.tazIdFieldName = "OBJECTID"
 beam.input.lastBaseOutputDir = ${beam.outputs.baseOutputDirectory}
 beam.input.simulationPrefix = "year"
-beam.agentsim.agents.plans.merge.fraction = 1.0
+beam.agentsim.agents.plans.merge.fraction = 0.4
 beam.warmStart.type = "linkStatsFromLastRun"
 beam.exchange {
   output {
@@ -126,6 +126,7 @@ beam.physsim.linkStatsBinSize = 3600
 beam.physsim.ptSampleSize = 0.03
 beam.physsim.jdeqsim.agentSimPhysSimInterfaceDebugger.enabled = false
 beam.physsim.skipPhysSim = false
+beam.physsim.name = "PARBPRSim"
 
 ###########################
 # Replanning
