--- a/seattle.conf
+++ b/seattle.conf
@@ -94,7 +94,7 @@ beam.agentsim.agents.households {
   inputHouseholdAttributesFilePath = ""
 }
 #BeamVehicles Params
-beam.agentsim.agents.vehicles.linkToGradePercentFilePath = ${beam.inputDirectory}"/r5/linkToGradePercent.csv"
+beam.agentsim.agents.vehicles.linkToGradePercentFilePath = ${beam.inputDirectory}"/r5-dense/linkToGradePercent.csv"
 beam.agentsim.agents.vehicles.fuelTypesFilePath = ${beam.inputDirectory}"/beamFuelTypes.csv"
 beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/vehicleTypes.csv"
 beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/vehicles.csv.gz"
@@ -115,7 +115,7 @@ beam.agentsim.tuning.rideHailPrice = 1.0
 ###########################
 # Physsim
 ###########################
-beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/r5/physsim-network.xml"
+beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/r5-dense/physsim-network.xml"
 beam.physsim.flowCapacityFactor = 0.1
 beam.physsim.storageCapacityFactor = 0.01
 beam.physsim.writeEventsInterval = 0
@@ -328,11 +328,11 @@ beam.routing {
   transitOnStreetNetwork = true
   baseDate = "2023-05-02T00:00:00-07:00"
   r5 {
-    directory = ${beam.inputDirectory}"/r5"
+    directory = ${beam.inputDirectory}"/r5-dense"
     # Departure window in min
     departureWindow = 1.0167
-    osmFile = ${beam.inputDirectory}"/r5/aaafile0_speed_capacity.osm.pbf"
-    osmMapdbFile = ${beam.inputDirectory}"/r5/osm.mapdb"
+    osmFile = ${beam.inputDirectory}"/r5-dense/seattle-partially-simplified.osm.pbf"
+    osmMapdbFile = ${beam.inputDirectory}"/r5-dense/osm.mapdb"
     mNetBuilder.fromCRS = "epsg:4326" # WGS84
     mNetBuilder.toCRS = ${beam.spatial.localCRS}
     linkRadiusMeters = 9000.0
