update seattle config

--- a/seattle.conf
+++ b/seattle.conf
@@ -19,7 +19,7 @@ beam.exchange {
   }
 }
 beam.router.skim.activity-sim-skimmer.fileOutputFormat = "omx"
-beam.routing.r5.travelTimeNoiseFraction = 0.15
+beam.routing.r5.travelTimeNoiseFraction = 0.1
 beam.router.skim.writeSkimsInterval = 1
 
 
@@ -218,7 +218,7 @@ beam.outputs.writeEventsInterval = 1
 beam.outputs.writeLinkTraversalInterval = 0
 
 # The remaining params customize how events are written to output files
-beam.outputs.events.fileOutputFormats = "csv.gz,xml" # valid options: xml(.gz) , csv(.gz), none - DEFAULT: csv.gz
+beam.outputs.events.fileOutputFormats = "csv.gz" # valid options: xml(.gz) , csv(.gz), none - DEFAULT: csv.gz
 
 # Events Writing Logging Levels:
 # Any event types not explicitly listed in overrideWritingLevels take on defaultWritingLevel
@@ -338,6 +338,7 @@ beam.routing {
     linkRadiusMeters = 9000.0
   }
 }
+beam.physsim.minCarSpeedInMetersPerSecond = 1.0
 
 ##################################################################
 # Calibration
