--- a/seattle-1k.conf
+++ b/seattle-1k.conf
@@ -1,4 +1,4 @@
 include "seattle.conf"
 
-beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.000569
-beam.routing.r5.osmFile = ${beam.inputDirectory}"/r5/emme.osm.pbf"
+beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.0000569
+; beam.routing.r5.osmFile = ${beam.inputDirectory}"/r5/emme.osm.pbf"
