--- a/seattle.conf
+++ b/seattle.conf
@@ -11,7 +11,7 @@ beam.agentsim.taz.filePath=${beam.inputDirectory}"/shape/block-groups-32048.shp"
 beam.agentsim.taz.tazIdFieldName = "OBJECTID"
 beam.input.lastBaseOutputDir = ${beam.outputs.baseOutputDirectory}
 beam.input.simulationPrefix = "year"
-beam.agentsim.agents.plans.merge.fraction = 0.4
+beam.agentsim.agents.plans.merge.fraction = 1.0
 beam.warmStart.type = "linkStatsFromLastRun"
 beam.exchange {
   output {
@@ -100,7 +100,7 @@ beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/veh
 beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/vehicles.csv.gz"
 beam.agentsim.agents.vehicles.sharedFleets = []
 #TAZ params
-beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/taz-parking.csv.gz"
+beam.agentsim.taz.parkingFilePath = ""
 # SurgePricing parameters
 beam.agentsim.agents.rideHail.surgePricing.surgeLevelAdaptionStep=0.1
 beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
@@ -116,7 +116,7 @@ beam.agentsim.tuning.rideHailPrice = 1.0
 # Physsim
 ###########################
 beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/r5-dense/physsim-network.xml"
-beam.physsim.flowCapacityFactor = 0.4
+beam.physsim.flowCapacityFactor = 0.5
 beam.physsim.storageCapacityFactor = 0.5
 beam.physsim.writeEventsInterval = 0
 beam.physsim.writePlansInterval = 0
@@ -161,7 +161,7 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "HOME"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="Car"
-beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.01
+beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.0125
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet.csv"
 # Ride Hailing General Params
